Fix usage of deprecated methods and redundant casting
Signed-off-by: Dimitar Goshev <dimitar.goshev@here.com>